# platform

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: backlog-bug-report.yml  backlog-enabler.yml  backlog-investigation.yml  backlog-tech-debt.yml  backlog-user-story.yml  epic-bug-report.yml  epic-enabler.yml  epic-investigation.yml  epic-tech-debt.yml  epic-user-story.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: last-minute-changes.md  task.md
.github/workflows/: backend-quality.yml  bot-quality.yml  ci.yml  docs-pages.yml  docs-quality.yml  frontend-quality.yml
apps/backend/: auth.py  models_response.py  pyproject.toml
apps/bot/: Dockerfile  README.md
backend/: .dockerignore  Dockerfile  README.md  auth.py  config.py  dependencies.py  entrypoint.sh  models_response.py  pyproject.toml  server.py
backend/admin/: repository.py  response.py  router.py
backend/ai/: mock_provider.py  openai_provider.py  provider.py
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_evaluations.py  002_add_last_activity_at.py  003_add_communication_evaluations.py  003_communication_eval.py
backend/cases/: repository.py  request.py  response.py  router.py  service.py
backend/communication_eval/: judge.py  judge_schemas.py  repository.py  response.py  router.py  service.py
backend/core/: ai_orchestrator.py  mock_provider.py  openai_provider.py  provider.py  schemas.py
backend/evaluation/: repository.py  response.py  router.py  scorer.py  service.py
backend/exceptions/: auth_exceptions.py
backend/models/: database.py  db.py  request.py  response.py
backend/repositories/: reset_token_repository.py  user_repository.py
backend/routers/: login.py  refresh.py  reset_password.py  signup.py  verify.py
backend/services/: auth_service.py
backend/services/utils/: auth.py  email_utils.py
backend/sessions/: chat_repository.py  chat_request.py  chat_response.py  chat_service.py  diagnostics_request.py  diagnostics_response.py  diagnostics_service.py  repository.py  request.py  response.py  router.py  service.py
backend/tests/: conftest.py  test_admin_seed.py  test_admin_sessions.py  test_auth.py  test_cases.py  test_chat.py  test_communication_evaluation.py  test_diagnostics.py  test_evaluation.py  test_llm_orchestrator.py  test_persistent_sessions.py  test_scorer.py  test_sessions.py
bot/: Dockerfile  README.md  backend_client.py  bot.py  bot_config.py  middleware.py  pyproject.toml  states.py
bot/routers/: auth.py  errors.py  menu.py
docs/: .gitignore  CHANGELOG.md  CNAME  Dockerfile  README.md  _config.yml  index.md
docs/_layouts/: default.html
docs/architecture/: system-architecture.md
docs/cases/: case-design-rationale.md  case001-acute-mi.json  case001-acute-mi.md  case002-migraine.json  case002-migraine.md  case003-pneumonia.json  case003-pneumonia.md  clinical-case-format-v2.md  clinical-case-format.md  example-case-pmc10783203-v2.md
docs/cm/: configuration-management.md
docs/data/: clinical-case-format.md  clinical-case-sources.md
docs/integrations/: integration-overview.md
docs/market/: market-assessment.md
docs/product/: technical-product-description.md
docs/project management/: strategic-planning.md  tactical-planning.md
docs/qa/: index.md  qa-rev1.md  qa-rev2.md
docs/research/: ai-patient-experimental-verification.md  ai-patient-problems-and-mitigations.md  case_config.json  case_config_2.json  long-dialogue-script.md  patient_anthropic_eval_protocol.ipynb  patient_llm_eval.ipynb  results_Claude_Sonnet_4.6.json  results_Claude_Sonnet_4.6_c2.json  results_Claude_Sonnet_4.6_t0_7.json  results_Claude_Sonnet_4.6_t0_7_c2.json  (+7 more)
frontend/: Dockerfile  README.md  analysis_options.yaml  pubspec.yaml
scripts/: seed_clinical_cases.sh
(+227 files in other folders)
