[project]
name = "virtual-ai-patient-backend"
version = "0.1.0"
description = "FastAPI backend for Virtual AI Patient"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyjwt",
    "pydantic>=2",
    "httpx",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy==1.14.1",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.14"
strict = true

