[project]
name = "virtual-ai-patient-backend"
version = "0.1.0"
description = "FastAPI backend for Virtual AI Patient"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyjwt",
    "pydantic>=2",
    "httpx",
    "bcrypt",
    "sqlalchemy",
    "asyncpg",
    "python-dotenv",
    "email-validator",
    "python-multipart>=0.0.22",
    "greenlet>=3.3.2",
    "pre-commit>=4.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy==1.14.1",
    "pytest>=8.0.0",
    "aiosqlite",
    "pytest-asyncio",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.14"
strict = true
